--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,22 @@
     background-color: #252525;
     color: #fff;
 }
+
+.ui-menu-color-home {
+    background-color: orange;
+}
+
+.ui-menu-color-resume {
+    background-color: purple;
+}
+
+.ui-menu-color-contact {
+    background-color: red;
+}
+
+.ui-menu-color-download {
+    background-color: green;
+}
 /*Header */
 header {
     margin: 0;
@@ -41,4 +57,64 @@ header {
     margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
+}
+
+.list-inline-item:not(:last-child){
+    margin: 0;
+}
+
+/* Menucontainer */
+.menucontainer {
+    font-size: 0;
+}
+
+/* Nav */
+
+#nav {
+    margin: 0;
+}
+#nav li{
+    font-size: 14px;
+    padding: 0;
+
+}
+
+.menuitem {
+    height: 120px;
+    text-align: center;
+    padding: 0;
+}
+
+.menuitem a {
+    width: 100%;
+    text-decoration: none;
+    color: #fff;
+    height: 120px;
+}
+
+.menuitem a i {
+    padding-top: 22px;
+    display: block;
+    color: #fafaff;
+    font-size: 26px;
+}
+
+.menuitem span {
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+/* Hover . css */
+.hvr-sweep-to-bottom::before {
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 120px;
+    
+
+
 }
