--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
+/* -------------------------------------------------------- Google fonts */
+
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
 
-/* Colour */
+/* --------------------------------------------------------Colour */
 .bg-color-name-title {
     background-color: #252525;
     color: #fff;
@@ -14,6 +16,11 @@
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
+}
+
+.bg-color-work-history {
+    background-color: purple;
+
 }
 
 
@@ -33,9 +40,12 @@
     background-color: green;
 }
 
-/* Special padding/margins/text */
+/* -----------------------------------------------Special padding/margins/text */
 
-h1, h2,h3,h4 {
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
 }
 
@@ -43,7 +53,7 @@ h1, h2,h3,h4 {
     text-transform: uppercase;
 }
 
-/* General */
+/* -------------------------------------------------------------General */
 
 .general-sub {
     font-family: "Exo", sans-serif;
@@ -66,6 +76,7 @@ h1, h2,h3,h4 {
     float: none;
 }
 
+.history-heading,
 .section-heading {
     font-family: "Eko", sans-serif;
     font-weight: 300;
@@ -73,7 +84,7 @@ h1, h2,h3,h4 {
     margin-bottom: 40px;
 }
 
-/*Header */
+/*---------------------------------------------------------Header */
 header {
     margin: 0;
 }
@@ -81,7 +92,8 @@ header {
 .heading {
     margin-left: 50px;
 }
-/* Logo */
+
+/* -----------------------------------------------------------Logo */
 .logo {
     background: url("../images/ngozii.png");
     background-position: center;
@@ -93,7 +105,7 @@ header {
     -webkit-transition: all .5s ease-in-out;
 }
 
-/* Name and  Title*/
+/* ---------------------------------------------------------Name and  Title*/
 
 .name {
     font-family: "Exo", sans-serif;
@@ -103,7 +115,7 @@ header {
     color: #fff;
 }
 
-.title{
+.title {
     font-family: "Roboto", sans-serif;
     font-weight: 200;
     font-size: 28px;
@@ -112,21 +124,22 @@ header {
     color: #fff;
 }
 
-.list-inline-item:not(:last-child){
+.list-inline-item:not(:last-child) {
     margin: 0;
 }
 
-/* Menucontainer */
+/* --------------------------------------------------Menucontainer */
 .menucontainer {
     font-size: 0;
 }
 
-/* Nav */
+/* --------------------------------------------------------Nav */
 
 #nav {
     margin: 0;
 }
-#nav li{
+
+#nav li {
     font-size: 14px;
     padding: 0;
 
@@ -163,13 +176,13 @@ header {
     letter-spacing: 2px;
 }
 
-/* Hover . css */
+/* -----------------------------------------------Hover . css */
 .hvr-sweep-to-bottom::before {
     background-color: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/* Footer */
+/* -------------------------------------------------Footer */
 
 footer {
     background-color: #252525;
@@ -222,8 +235,8 @@ footer {
     padding: 20px;
 }
 
-/* Three Reasons */
-.three-reasons-icon  {
+/* ----------------------------------------------------Three Reasons */
+.three-reasons-icon {
     font-size: 26px;
     color: orange;
 }
@@ -232,7 +245,7 @@ footer {
     margin-bottom: 15px;
 }
 
-/* Personal info */
+/* -----------------------------------------------------------Personal info */
 .personal-info-item {
     margin-bottom: 20px;
     display: block;
@@ -266,7 +279,7 @@ footer {
     width: 60%;
 }
 
-/* Skills */
+/* ------------------------------------------Skills */
 
 .progress {
     position: relative;
@@ -278,7 +291,8 @@ footer {
     position: absolute;
     left: 0px;
     font-weight: 400;
-    padding: 3px 30px 2px 10px; /*top, right, bottom left */
+    padding: 3px 30px 2px 10px;
+    /* ------------------------------------top, right, bottom left */
     color: #fafafa;
     background-color: rgba(25, 25, 25, 0.2);
 }
@@ -286,4 +300,53 @@ footer {
 
 .progress-section {
     margin: 40px 20px;
+}
+
+/* ---------------------------------------------- Work history */
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+
+}
+
+.timeline-item {
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background-color: #fafafa;
+}
+
+.history-items {
+    margin-bottom: 30px;
+
 }
