Change resume picture

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ header {
 
 /* -----------------------------------------------------------Logo */
 .logo {
-    background: url("../images/ngozii.png");
+    background: url("../images/ngozi-photo.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
